1998-02-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Add units already configured on partition type
	(default_partition) to every partition.

	* xe_back.adb: New procedure Show_Partition (extracted from
 	Show_Configuration).

1998-02-16  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb: Declare Default_Partition as a normal
 	partition. This way it is properly initialized.

	* xe_parse.adb: A declared subprogram ('Main) can be the main
 	procedure of the distributed application. Declare it twice
	caused gnatdist to yell.

1998-02-16  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_build.adb: Remove useless with clauses.

	* xe_check.adb: Likewise.

	* xe_lead.adb: Likewise.

	* xe.ads: Likewise.

	* xe_utils.ads: Likewise.

	* xe_stubs.adb: Likewise.

1998-02-15  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_back.adb: Remove unused variables.

1998-01-08  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_back.adb: Convert filter names to all lower in order to have
	the same convention between GNATDIST and GARLIC.

	* xe_scan.adb, xe_utils.ads, xe_utils.adb: Move
	To_Lower procedure from xe_scan body to xe_utils.
	Add a version of To_Lower for name_id.

1998-01-03  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Use String_Access from System.Garlic.Types

1998-01-02  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_usage.adb: Remove references to -V

	* gnatdist.in: Remove handling of -V

	* Makefile.am: Remove references to glade_version.txt

1997-12-15  Samuel Tardieu  <sam@inf.enst.fr>

	* gnatdist.in: Add special handling for -V.

	* xe_usage.adb: Update copyright notice. Add documentation for -V.

	* Makefile.am (data_DATA): Install glade_version.txt.

	* glade_version.txt: New wording.

1997-12-14  Samuel Tardieu  <sam@inf.enst.fr>

	* glade_version.txt: New file containing versioning information.

1997-12-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Fix 4911-G01. Handle properly the case in which a
	RCI has only a spec.
